# Terra-Invicta-shipbuilder

./: .gitignore  Cargo.toml  Trunk.toml  index.html
docs/: CNAME  index.html  shipbuilder-70cd5332644cfb2c.js  shipbuilder-70cd5332644cfb2c_bg.wasm
docs/data/: TIShipHullTemplate.json
src/: console.rs  frontend.rs  logic.rs  main.rs  template.rs
