[package]
name = "shipbuilder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["web"] }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"

reqwest = { version = "0.11", features = ["json"] }
log = "0.4.17"
web-sys = {version = "0.3.60", features = ["console"]}